# otf2-reader

./: .clang-format  CMakeLists.txt  README.md
src/: args.cpp  args.hpp  json_dump.cpp  json_dump.hpp  main.cpp
src/OTF2/: CMakeLists.txt  OTF2CallTree.cpp  OTF2CallTree.hpp  OTF2Callbacks.cpp  OTF2Callbacks.h  OTF2EnumToStrings.cpp  OTF2EnumToStrings.hpp  OTF2Reader.cpp  OTF2Reader.h
